# goeta

./: CMakeLists.txt
kernels/: csvparser.hpp
src/: CMakeLists.txt
src/main/: goeta.cpp
src/main/neuron/: Axon.cpp  Axon.h  CMakeLists.txt  Neuron.cpp  Neuron.h
src/main/types/: CMakeLists.txt  aliases.h
src/main/types/structs/: Cell.h
src/main/utils/: CMakeLists.txt  common.h
